--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"server-only": "^0.0.1",
 		"sonner": "^1.7.4",
 		"superjson": "^2.2.2",
+		"svix": "^1.57.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.2",
