--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@uploadthing/react": "^7.3.0",
 		"@upstash/ratelimit": "^2.0.5",
 		"@upstash/redis": "^1.34.4",
+		"@upstash/workflow": "^0.2.9",
 		"class-variance-authority": "^0.7.1",
 		"client-only": "^0.0.1",
 		"clsx": "^2.1.1",
@@ -74,6 +75,8 @@
 		"svix": "^1.57.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
+		"together": "^0.0.11",
+		"together-ai": "^0.13.0",
 		"uploadthing": "^7.5.2",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2"
