--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"react-dom": "^18.3.1",
 		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-intersection-observer": "^9.16.0",
 		"react-resizable-panels": "^2.1.7",
 		"recharts": "^2.15.1",
 		"server-only": "^0.0.1",
